# tides-implementations

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
agencies/wmata/sdh-open-source/: .containerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  NEWS.md  README.md  example.env  pyproject.toml
agencies/wmata/sdh-open-source/.github/: dependabot.yml  pull_request_template.md
agencies/wmata/sdh-open-source/.github/ISSUE_TEMPLATE/: bug-report.yaml  data-infra-issue-template.yaml
agencies/wmata/sdh-open-source/.github/workflows/: build_doc_site.yaml  pre_commit.yaml  project-open-source.yaml
agencies/wmata/sdh-open-source/docs/: CONTRIBUTING.md  README.md
agencies/wmata/sdh-open-source/docs/authentication/: overview.md
agencies/wmata/sdh-open-source/docs/dagster/: deployment.md
agencies/wmata/sdh-open-source/docs/iceberg/: glossary.md  iceberg_operations.md
agencies/wmata/sdh-open-source/docs/infrastructure/: README.md  authorization.md  container-app-jobs.md  identities.md  lakekeeper.md  openmetadata.md  trino.md  upgrading-openmetadata.md
agencies/wmata/sdh-open-source/docs/openmetadata/: ingestion.md  integration-overview.md
agencies/wmata/sdh-open-source/docs/pipelines/: README.md  testing_dagster.md
agencies/wmata/sdh-open-source/docs/sphinx/: README.md  build.py
agencies/wmata/sdh-open-source/docs/sphinx/templates/: conf.py  index.md
agencies/wmata/sdh-open-source/docs/trino/: authentication-overview.md  password-authentication.md
agencies/wmata/sdh-open-source/docs/warehouse/: README.md  bus_info.md  dbt_tests_quality.md  fare_fares_data.md  faregate_data_faregate_data.md  fares_and_faregates.md  gtfs_schedule_data.md  near_realtime_bus.md  open_payment_data.md  sample_data_workflow.md
agencies/wmata/sdh-open-source/pipelines/: .gitignore  Containerfile  README.md  definitions.py  docker-compose.yaml  env.py  partitions.py
agencies/wmata/sdh-open-source/pipelines/bus_info/: assets.py  definitions.py  schedules.py
agencies/wmata/sdh-open-source/pipelines/bus_ridership/: assets.py  definitions.py  schedules.py  sensors.py
agencies/wmata/sdh-open-source/pipelines/common/: asset_checks.py  assets.py
agencies/wmata/sdh-open-source/pipelines/dbt/: __init__.py  assets.py  definitions.py  jobs.py  project.py  schedules.py  sensors.py
agencies/wmata/sdh-open-source/pipelines/faregate/: assets.py  definitions.py  schedules.py
agencies/wmata/sdh-open-source/pipelines/gtfs/: assets.py  definitions.py  schedules.py  sensors.py
agencies/wmata/sdh-open-source/pipelines/iceberg_operations/: definitions.py  ops.py
agencies/wmata/sdh-open-source/pipelines/open_pay/: assets.py  definitions.py  schedules.py
agencies/wmata/sdh-open-source/pipelines/openmetadata/: __init__.py  common.py  dagster.py  dbt.py  definitions.py  metabase.py  trino.py
agencies/wmata/sdh-open-source/pipelines/realtime_bus_info/: assets.py  definitions.py  schedules.py
agencies/wmata/sdh-open-source/pipelines/realtime_bus_info/schemas/: v_itapps_daily_routes.yaml
agencies/wmata/sdh-open-source/pipelines/resources/: __init__.py  azure_credential.py  azure_parquet_writer.py  azure_storage.py  gtfs_api.py  iceberg_writer.py  oracle_db.py  trino.py  utils.py
agencies/wmata/sdh-open-source/pipelines/tests/: README.md  conftest.py  test_assets.py  test_definitions.py  test_iceberg_writer.py  test_utils.py
agencies/wmata/sdh-open-source/pipelines/trino_test/: assets.py  definitions.py
agencies/wmata/sdh-open-source/scripts/: bootstrap-avd  bootstrap-dev  build-dagster-containers  pull-dotenv  push-dagster-containers  restart-dagster-containers
agencies/wmata/sdh-open-source/tf/: .gitignore  README.md  create_state_storage.sh
agencies/wmata/sdh-open-source/tf/envs/: README.md
agencies/wmata/sdh-open-source/tf/envs/dev/: main.tf
agencies/wmata/sdh-open-source/tf/envs/poc/: imports.tf  main.tf  providers.tf  variables.tf
agencies/wmata/sdh-open-source/tf/envs/stg/: .tfvars.template  NEEDS.md  imports.tf  main.tf  providers.tf  variables.tf
agencies/wmata/sdh-open-source/tf/modules/common/: container_apps.tf  databases.tf  entra.tf  identities.tf  main.tf  networking.tf  outputs.tf  secrets.tf  storage.tf  variables.tf
agencies/wmata/sdh-open-source/tf/modules/machine_users/: main.tf  outputs.tf  variables.tf
agencies/wmata/sdh-open-source/warehouse/: .gitignore  README.md  dbt_project.yml  example.env  package-lock.yml  packages.yml
agencies/wmata/sdh-open-source/warehouse/docs/: bus_info_imputation.md  bus_ridership.md  daily_stop_ridership.md  fares.md  fares_quality.md  gtfs.md  hourly_stop_ridership.md  quality.md  tides_fare_transactions.md  tides_passenger_events.md  tides_passenger_events_quality.md  tides_station_activities.md  tides_stop_visits.md  tides_trips_performed.md  tides_vehicle_locations.md  trip_ridership.md  utils.md  vendor_2.md
agencies/wmata/sdh-open-source/warehouse/macros/: bounding_box_filter.sql  dialect_agnostic_array_join_str.sql  dialect_agnostic_cast.sql  dialect_agnostic_count_if.sql  dialect_agnostic_datetime.sql  dialect_agnostic_make_noon.sql  dialect_agnostic_regexp.sql  dialect_agnostic_select.sql  dialect_agnostic_today.sql  generate_schema_name.sql  haversine_distance.sql  macros.yml
agencies/wmata/sdh-open-source/warehouse/tests/: test_bus_info_scheduled_trips_exist_in_gtfs.sql  test_bus_info_to_gtfs_stop_id_matches.sql  test_dim_stops_stop_code_unique_stop_id_per_feed.sql  test_gtfs_pattern_single_route.sql  test_gtfs_patterns_stop_mapping_issues.sql  test_missing_ridership_due_to_filter_in_vehicle_locations.sql  test_rail_fare_transactions_completeness.sql  test_ridership_quality_metrics.sql  test_schedule_stop_sequence_monotonic.sql  test_schedule_stop_sequence_partial_nulls.sql  test_scheduled_trips_no_mode_gaps.sql  test_shape_id_uniqe_stop_sequences.sql  test_stop_id_imputed_null_rate_scheduled.sql  test_stop_id_imputed_null_reason_breakdown.sql  test_stop_sequence_multiple_values_per_stop.sql  test_tides_in_service_vehicle_locations_pattern_id_matches_gtfs_trip.sql
(+190 files in other folders)
