[project]
name = "smart-data-hub"
version = "0.1.0"
description = "TIDES Infrastructure Setup"
requires-python = "==3.12.*"


# dependency groups: groups are dagster-dev, dagster(deployed service), dbt, dbt-dev
# and linters + docs
# dagster dev focuses on pipeline dev work, dbt-dev dbt dev work,
# and dbt is for dbt-specific packages that dagster deployed would needed
# dagster should then have everything its pipelines would need to run

[dependency-groups]

linters = [
    "pre-commit",
    "ruff==0.11.12",
    "sqlfluff==3.4.1",
    "sqlfluff-templater-dbt==3.4.1",
]

python-testing = [
    "coverage",
    "pytest",
    "pytest-cov",
]

dbt = [
    "dbt==1.0.0.40.8",
    "dbt-core==1.10.13",
    "dbt-trino",
    "pandas==2.3.0",
    "trino[external-authentication-token-cache]",
    "sphinxcontrib-mermaid>=1.0.0",
]

dagster-core = [
    "dagster>=1.10.7",
]

dagster-webserver = [
    "dagster-webserver>=1.10.7",
]

dagster-pipelines = [
    {include-group = "dbt"},
    {include-group = "dagster-core"},
    "adlfs>=2024.12.0",
    "attrs>=25.3.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-identity>=1.21.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-resource>=24.0.0",
    "azure-mgmt-storage>=23.0.1",
    "dagster-db>=0.3.2",
    "dagster-dbt>=0.26.15",
    "openmetadata-ingestion[dagster,dbt,trino]==1.11.8",
    "oracledb>=3.1.1",
    "packaging>=24.2",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.1",
    "pyiceberg>=0.9.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.3",
    "trino>=0.335.0",
]

dagster-deploy-core = [
    "dagster-postgres>=0.26.15",
]

dagster-deploy-daemons = [
    {include-group = "dagster-core"},
    {include-group = "dagster-deploy-core"},
    {include-group = "dagster-webserver"},
    "dagster-graphql>=1.10.7",
]

dagster-deploy-pipelines = [
    {include-group = "dagster-pipelines"},
    {include-group = "dagster-deploy-core"},
]

dbt-dev = [
    {include-group = "dbt"},
    {include-group = "linters"},
    "dbt-duckdb==1.9.3",
    "duckdb==1.3.0"
]


docs = [
    "sphinx>=8.1.3",
    "sphinx-book-theme>=1.1.4",
    "myst-parser>=4.0.1",
    "myst-parser[linkify]"
]


dagster-dev = [
    {include-group = "dagster-pipelines"},
    {include-group = "dagster-webserver"},
    {include-group = "dbt-dev"},
    {include-group = "docs"},
    {include-group = "linters"},
    {include-group = "python-testing"},
    "azure-storage-blob>=12.25.1",
    "ipython",
    "ipykernel",
]


[tool.uv]
default-groups = ["dagster-dev", "dbt-dev"]

[tool.dagster]
module_name = "pipelines.definitions"
code_location_name = "pipelines"

[tool.pytest.ini_options]
# Looks like a warning generated by dagster that doesn't bear on python <3.15
# .venv\Lib\site-packages\dagster_shared\check\builder.py:128
# c:\Users\[USER]\Documents\projects\smart-data-hub\.venv\Lib\site-packages\dagster_shared\check\builder.py:128:
# (redacted: user directory segment replaced with placeholder)
# DeprecationWarning: Failing to pass a value to the 'type_params' parameter of 'typing.ForwardRef._evaluate' is
# deprecated, as it leads to incorrect behaviour when calling typing.ForwardRef._evaluate on a stringified annotation
# that references a PEP 695 type parameter. It will be disallowed in Python 3.15.
filterwarnings = [
    "ignore:Failing to pass a value to the 'type_params' parameter of 'typing.ForwardRef._evaluate' is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:dbt_common.invocation", # Warns due to using datetime.now() in dbt_common
    "ignore::pydantic.warnings.PydanticDeprecatedSince20", # warning due to a use of Config class somewhere
    "ignore:Parameter.*backfill_policy.*of function.*asset.*is currently in beta.*",
    "ignore:Signature.*does not match any known type.*:UserWarning:numpy.*",
    "ignore:Deprecated API features detected.*:sqlalchemy.exc.RemovedIn20Warning", # SQLAlchemy 2.0 compatibility warning from Dagster

]


markers = [
    # used mostly to guide when we should run tests; these ones important
    "unit: test isolated functions, no external deps.",
    "integration: test interactions between components",
    "slow: mark test as slow (>5 seconds)",
    # stack specific (not sure yet on dbt flags; not sure if needed.)
    "dagster: to flag dagster-related items",
]
# Note: don't add filters on markers in pyproject.toml; some of that will happen
# at command line or in settings.json

[tool.coverage.run]
branch = true
include = ["**/*.py"] # for now, just python
# note:
# relative files apparently useful for GH actions
# but, breaks vscode's sidebar in testing to jump to files
# see https://github.com/microsoft/vscode-python/issues/24259
# and possibly: https://github.com/nedbat/coveragepy/issues/1674
relative_files = true

[tool.coverage.report]
omit = ["**/tests/*"] # will broadly exclude test domains
fail_under = 0      # for now, no requirements here
precision = 1


# linter rules -----------------------------------------------------------


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.sqlfluff.core]
dialect = "duckdb"
max_line_length = 120
indent_unit = "space"
tab_space_size = 4
layout_config_style = "vertical"  # Put keywords on new lines
output_line_length = 120
templater = "dbt"

[tool.sqlfluff.templater.dbt]
project_dir = "warehouse"
profiles_dir = "warehouse"
target = "local"

[tool.sqlfluff.layout.type.comma]
line_position = "trailing"

# See rules at https://docs.sqlfluff.com/en/stable/reference/rules.html
[tool.sqlfluff.rules.layout.indent]
indent_unit='space'
[tool.sqlfluff.rules.layout.spacing]
[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy="lower"
[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy="lower"
[tool.sqlfluff.rules.capitalisation.functions]
extended_capitalisation_policy="lower"
[tool.sqlfluff.rules.capitalisation.types]
extended_capitalisation_policy="lower"
[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy="lower"
[tool.sqlfluff.rules.layout.commas]
[tool.sqlfluff.rules.references.qualification]
[tool.sqlfluff.rules.aliasing.forbid]
force_enable = true  # Only needed for aliasing.forbid
[tool.sqlfluff.rules.structure.column_order]
[tool.sqlfluff.rules.structure.subquery]
